@@ -4,6 +4,9 @@
 	  src/pdk/ralloc2.cc,
 	  support/regression/tests/bug3564104.c:
 	  Improve register allocation for shift and addition, RFE #608.
+	* support/valdiag/valdiag.py,
+	  support/valdiag/Makefile.in:
+	  Enable testing of diagnostics for pdk14.
 
 2019-03-17 Philipp Klaus Krause <pkk AT spth.de>
 
